[project]
name = "agri-bq-emission"
version = "0.1.0"
description = "Generalized CO2 emission calculation from BigQuery and CSV input."
authors = [{ name = "Pranay Sharma", email = "sharmapranay38@gmail.com" }]

[tool.poetry.dependencies]
pandas = "^2.0.0"
pandas-gbq = "^0.19.2"
rapidfuzz = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
